# cpp-cmake-ninja-vcpkg-vscode-example

./: CMakeLists.txt  README.md  vcpkg.json
src/: CMakeLists.txt  main.cpp
